# euler

./: README.md  build.sh  fractions.hs  problem01.hs  problem02.hs  problem03.hs  problem04.hs  problem05.hs  problem06.hs  problem07.hs  problem14.hs  problem17.hs  problem26.hs  problem28.hs  problem31.hs  problem33.hs  problem34.hs  problem35.hs  problem36.hs  problem37.hs  problem38.hs  problem39.hs  problem40.hs  problem42.hs  problem43.hs  problem44.hs  problem45.hs  problem46.hs  problem47.hs  problem48.hs  problem49.hs  problem50.hs  problem50_alt.hs  problem52.hs  problem53.hs  problem54.hs  problem55.hs  problem56.hs  problem58.hs  problem59.hs  (+2 more)
Euler/: Helpers.hs
hpoker/: hpoker.lkshs  hpoker.lkshw
hpoker/hpoker/: hpoker.cabal
hpoker/hpoker/src/: Cards.hs  Hands.hs  HandsTest.hs  Main.hs  Tests.hs
